# nba-analyst-agent

./: .env.example  .gitignore  .gitmodules  BIGQUERY_MIGRATION_PLAN.md  CLAUDE.md  POSTGRES_SETUP.md  README.md  SETUP_INSTRUCTIONS.md  debug_columns.py  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
analytics_pipeline/analytics/: defensive.py  processor.py
analytics_pipeline/config/: __init__.py  database.py  settings.py
analytics_pipeline/ingestion/: ingest.py
analytics_pipeline/processing/: pipeline.py  transforms.py
bot_publisher/: main.py
bot_subscriber/: main.py  requirements.txt
data/: box_scores_schema.json  totals_schema.json
deployment/: deploy.py  deploy_test_agent.py  nba_analyst_agent-0.1-py3-none-any.whl
docs/: PRD.md  USAGE.md  advanced_analytics_tools.md  nba_agent_interaction_examples.md
nba_analyst_agent/: __init__.py  agent.py
scripts/: README_DEPLOY.md  clean_totals_csv.py  create_database.py  deploy_cloud_run.sh  deploy_vertex_ai_agent_engine.py  generate_monthly_trends.py  load_nba_data.py  load_nba_data_to_bq.py  query_player_trends.py  setup_postgres.py  setup_postgres.sh
src/analytic_agent/: agent.py  tools.py
src/analytics_pipeline/analytics/: metrics.py
src/analytics_pipeline/database/: connection.py
src/analytics_pipeline/ingestion/: __init__.py  validators.py
src/analytics_pipeline/processing/: __init__.py  workflow.py
src/bot/: .gcloudignore  main.py  requirements.txt
src/bot_publisher/: main.py  requirements.txt
src/bot_subscriber/: main.py  requirements.txt
src/nba_analyst/: __init__.py
src/nba_analyst/analytics/: __init__.py  efficiency.py  trends.py
src/nba_analyst/config/: database.py  settings.py
src/nba_analyst/database/: __init__.py  connection.py  models.py
src/nba_analyst/ingestion/: bq_loader.py  csv_reader.py  ingest.py
src/nba_analyst/processing/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_analytics_defensive.py  test_analytics_efficiency.py  test_analytics_metrics.py  test_csv_reader.py  test_ingestion.py  test_models.py  test_validators.py
